--- a/styles.css
+++ b/styles.css
@@ -2,31 +2,31 @@ body {
     background-color: lightgray;
 }
 
-h1{
+h3{
     text-align: left;
     font-family: Geneva;
     font-weight: bold;
-    font-size: 60px;
+    color: rgb(32, 177, 177);
+}
+
+h4{
+    text-align: left;
+    font-family: Geneva;
+    font-weight: bold;
     color: rgb(32, 177, 177);
 }
 
 .ttle{
     box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    border: 4px solid #c2924e;
-	border-style: ridge;
     widows: 10px;
 height:auto;
 padding:10px;
 min-height:150px;
-border-bottom-left-radius: 3em;
-border-top-right-radius: 3em;
-background-color:#000;
+background-color: white;
 position:relative;
 	}
 
-img{
+/* img{
     
     width: 15%;
 
@@ -41,4 +41,4 @@ img{
     /* Area between the outer edge of the border and other elements */
     margin: 4.4%;
 
-}
+} */
